@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2019 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,7 +22,6 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.leaderelection.bully;
 
 import com.iluwatar.leaderelection.AbstractMessageManager;
@@ -29,7 +30,6 @@ import com.iluwatar.leaderelection.Message;
 import com.iluwatar.leaderelection.MessageType;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Implementation of BullyMessageManager.
@@ -52,8 +52,7 @@ public class BullyMessageManager extends AbstractMessageManager {
   @Override
   public boolean sendHeartbeatMessage(int leaderId) {
     var leaderInstance = instanceMap.get(leaderId);
-    var alive = leaderInstance.isAlive();
-    return alive;
+    return leaderInstance.isAlive();
   }
 
   /**
@@ -70,7 +69,7 @@ public class BullyMessageManager extends AbstractMessageManager {
       return true;
     } else {
       var electionMessage = new Message(MessageType.ELECTION_INVOKE, "");
-      candidateList.stream().forEach((i) -> instanceMap.get(i).onMessage(electionMessage));
+      candidateList.forEach((i) -> instanceMap.get(i).onMessage(electionMessage));
       return false;
     }
   }
@@ -114,7 +113,7 @@ public class BullyMessageManager extends AbstractMessageManager {
     return instanceMap.keySet()
         .stream()
         .filter((i) -> i < currentId && instanceMap.get(i).isAlive())
-        .collect(Collectors.toList());
+        .toList();
   }
 
 }
